@@ -38,6 +38,16 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+ 				<groupId>org.apache.maven.plugins</groupId>
+ 				<artifactId>maven-surefire-plugin</artifactId>
+ 				<version>2.11</version>
+ 				<configuration>
+  					<argLine>-Xms512m -Xmx3024m -XX:MaxPermSize=1024m</argLine>
+  					<!--  has to be disabled due to liferay's analyzer implementation -->
+  					<enableAssertions>false</enableAssertions>
+ 				</configuration>
+			</plugin> 
 		</plugins>
 
 	</build>
@@ -203,6 +213,33 @@
 			<version>3.0.6.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>3.0.6.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+	<groupId>javax.jcr</groupId>
+	<artifactId>jcr</artifactId>
+	<version>2.0</version>
+			<scope>test</scope>
+</dependency>
+<dependency>
+	<groupId>org.quartz-scheduler</groupId>
+	<artifactId>quartz</artifactId>
+	<version>2.1.6</version>
+			<scope>test</scope>
+</dependency>
+
+
+		
 		
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -283,9 +320,23 @@
 			<scope>test</scope>
 		</dependency>
 		
+<dependency>
+	<groupId>com.browseengine.bobo</groupId>
+	<artifactId>bobo-browse</artifactId>
+	<version>3.2.0</version>
+  			<scope>test</scope>
+</dependency>
+		
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-spellchecker</artifactId>
+			<version>3.5.0</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-highlighter</artifactId>
 			<version>3.5.0</version>
 			<scope>test</scope>
 		</dependency>
@@ -334,6 +385,46 @@
   <version>2.3.6</version>
   			<scope>test</scope>
 </dependency>
+<dependency>
+	<groupId>org.mozilla</groupId>
+	<artifactId>rhino</artifactId>
+	<version>1.7R4</version>
+  			<scope>test</scope>
+</dependency>
+
+<dependency>
+	<groupId>org.jruby</groupId>
+	<artifactId>jruby</artifactId>
+	<version>1.7.13</version>
+  			<scope>test</scope>
+</dependency>
+<dependency>
+	<groupId>org.freemarker</groupId>
+	<artifactId>freemarker</artifactId>
+	<version>2.3.20</version>
+  			<scope>test</scope>
+</dependency>
+<dependency>
+	<groupId>org.apache.jackrabbit</groupId>
+	<artifactId>jackrabbit-core</artifactId>
+	<version>2.8.0</version>
+			<scope>test</scope>
+</dependency>
+
+<dependency>
+	<groupId>org.mnode.ical4j</groupId>
+	<artifactId>ical4j</artifactId>
+	<version>1.0.2</version>
+			<scope>test</scope>
+</dependency>
+<dependency>
+	<groupId>com.ibm.icu</groupId>
+	<artifactId>icu4j</artifactId>
+	<version>53.1</version>
+			<scope>test</scope>
+</dependency>
+
+
 		
 		
     	
